...
                c.filter == 'unread'
                    ? s.notificationEmptyUnread
                    : s.notificationEmpty,
              ),
            for (final item in c.page?.items ?? <NotificationView>[])
              Card(
                key: Key('notification-${item.id}'),
                child: Padding(
                  padding: const EdgeInsets.all(16),
                  child: Column(
                    crossAxisAlignment: CrossAxisAlignment.start,
                    children: [
                      info(item),
...
